--- a/style.css
+++ b/style.css
@@ -1,13 +1,20 @@
 /* Main Style Page */
 
 /* Style for the head */
-head {
+h1 {
+    font-family: 'Arial', sans-serif;
+    font-size: 2.5em;
+    text-align: center;
+    margin-top: 20px;
+    color: #0bdb62;
+}
+h2 {
     color: blue;
 }
 
 /* Style for the page background */
 body {
-    background-color: red;
+    background-color: rgb(85, 80, 61);
     background-image: url('flower-theme.jpg'); /* Replace with the path to your flower theme image */
     background-size: cover;
     background-repeat: no-repeat;
